# Livekit-jordan

./: .env  DOCKER-SETUP.md  Dockerfile.livekit  README.md  docker-compose.yml  setup-livekit.bat  setup-livekit.ps1  start-livekit.sh
Live-kit/: .dockerignore  .env  .gitignore  Dockerfile.api  Dockerfile.livekit  README.md  README_CHAT.md  README_TESTING.md  agent.py  compose.yml  customer_support_agent.py  customer_support_agent_fixed.py  docker-compose.api.yml  env.example  livekit.yaml  pyproject.toml  test_chat.py  test_quick.py  web-setup-guide.md
Live-kit/data/: customers.json  orders.json  products.json
Live-kit/src/: api_server.py  conversation_manager.py  customer_support_agent.py  system_prompt.py  text_chat_agent.py
livekit-web/: .env.local  next.config.ts  package-lock.json  package.json  tailwind.config.js
livekit-web/src/app/: globals.css  layout.tsx  page.tsx
livekit-web/src/app/api/chat/init/: route.ts
livekit-web/src/app/api/chat/message/: route.ts
livekit-web/src/app/api/livekit/: route.ts
livekit-web/src/app/chat/: page.tsx
livekit-web/src/components/: Hero.tsx  HowItWorks.tsx  LiveDemo.tsx  VoiceChat.tsx  VoiceSelector.tsx
livekit-web/src/components/ui/: aurora-background.tsx  background-ripple-effect.tsx  floating-dock.tsx  navbar.tsx  shooting-stars.tsx  stars-background.tsx
